# QtQuickControls

./: .gitignore  CMakeLists.txt  README.md  TicTacToe.pro  TicTacToe_linux_64  build_windows.sh  controller.cpp  controller.h  main.cpp  main.qml  player_factory.cpp  player_factory.h  qml.qrc  rsrc.qrc  viewmodel.cpp  viewmodel.h
ai/: ai_exeptions.h  ai_player_aggressive.cpp  ai_player_aggressive.h  ai_player_defender.cpp  ai_player_defender.h  ai_player_random.cpp  ai_player_random.h  human_player.cpp  human_player.h  iplayer.cpp  iplayer.h  wincheck.cpp  wincheck.h
model/: cell.cpp  cell.h  field.cpp  field.h  model.cpp  model.h  model_exeptions.h
qml/: Cell.qml  main.qml
